Partial Transvoxel (no LOD); SPIR-V types in public

--- a/src/Atom/Engine/Atom.Engine.csproj
+++ b/src/Atom/Engine/Atom.Engine.csproj
@@ -14,14 +14,17 @@
 
     <ItemGroup>
       <Compile Remove="Core\**" />
+      <Compile Remove="Astro\**" />
     </ItemGroup>
 
     <ItemGroup>
       <EmbeddedResource Remove="Core\**" />
+      <EmbeddedResource Remove="Astro\**" />
     </ItemGroup>
 
     <ItemGroup>
       <None Remove="Core\**" />
+      <None Remove="Astro\**" />
     </ItemGroup>
 
     <ItemGroup>
