--- a/src/Atom/Engine/Astro/Atom.Engine.Astro.csproj
+++ b/src/Atom/Engine/Astro/Atom.Engine.Astro.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Core\Atom.Engine.Core.csproj" />
+      <ProjectReference Include="..\Graphics\Atom.Engine.Graphics.csproj" />
     </ItemGroup>
 
 </Project>
