--- a/src/Test/ComputeTest/ComputeTest/ComputeTest.csproj
+++ b/src/Test/ComputeTest/ComputeTest/ComputeTest.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\Atom\Engine\Core\Atom.Engine.Core.csproj" />
+      <ProjectReference Include="..\..\..\Atom\Atom.csproj" />
       <ProjectReference Include="..\..\..\SPIRV-Cross\SPIRV-Cross.csproj" />
     </ItemGroup>
 
