--- a/src/Atom/Atom.csproj
+++ b/src/Atom/Atom.csproj
@@ -28,6 +28,10 @@
       <PackageReference Include="Silk.NET.Windowing" Version="2.15.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Include="Engine\Graphics\Viewport.cs_o" />
+    </ItemGroup>
+
     <!--<ItemGroup>
       <ProjectReference Include="Engine\Atom.Engine.csproj" />
     </ItemGroup>-->
