--- a/src/Atom/Atom.csproj
+++ b/src/Atom/Atom.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Atom.Sculpture\Atom.Sculpture.csproj" />
       <ProjectReference Include="..\SPIRV-Cross\SPIRV-Cross.csproj" />
     </ItemGroup>
 
